fixed wrong picture on mobile screen

--- a/src/components/projects/github-jobs-api/github-jobs-api.styles.scss
+++ b/src/components/projects/github-jobs-api/github-jobs-api.styles.scss
@@ -113,7 +113,7 @@
     }
 
     .screenshot-mobile {
-      background-image: url(../../../assets/clommerceImage.png);
+      background-image: url(../../../assets/GitHubJobsScreenshot.png);
       background-color: $dark-gray-color;
       background-repeat: no-repeat;
       background-position: center;
